# sourcecast

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AGENTS.md.template  CLAUDE.md  CLAUDE.md.template  HUMAN_TASKS.md  PLAN.md  README.md  STRUCTURE.md  THIRD_PARTY_NOTICES.md  alembic.ini  biome.json  biome.jsonc  history_radio_spec_v0_4.md  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml  pyproject.toml
.claude/: settings.json
.claude/hooks/: guard_git_bypass.py  guard_human_wip.py  post_edit_format.py  post_edit_lint.py  session_baseline.py  stop_incomplete_guard.py
.claude/skills/ui-ux-pro-max/: SKILL.md
.codex/: hooks.json
.codex/hooks/: codex_hook_adapter.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: guardrails-ci.yml  guardrails-trusted.yml  update-ui-skills.yml  update-upstreams.yml
.guardrails/: BOOTSTRAP.md  CUSTOMIZE.md  GOALS.md  GUARDRAILS.md
.upstream/: sources.yaml
apps/admin/: package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/admin/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  test-setup.ts
apps/admin/src/lib/: api.test.ts  api.ts  useAsync.ts
apps/admin/src/pages/: Candidates.test.tsx  Candidates.tsx  Dashboard.tsx  Episodes.test.tsx  Episodes.tsx  Jobs.test.tsx  Jobs.tsx
apps/site/: AGENTS.md  astro.config.mjs  package.json  vitest.config.ts  wrangler.jsonc
apps/site/public/: _headers
apps/site/public/scripts/: pagefind-bridge.js
apps/site/scripts/: check-bundle-budget.ts
apps/site/src/: content.config.ts
apps/site/src/components/: AudioPlayer.astro  EpisodeDetail.astro
apps/site/src/layouts/: BaseLayout.astro
apps/site/src/lib/: line-diff.test.ts  line-diff.ts
apps/site/src/pages/: 404.astro  feed.xml.ts  index.astro  privacy.astro
bindings/: catalog.md
config/: external_tools.yaml  license_rules.yaml  model_registry.yaml  source_registry.yaml
config/readings/: README.md  eras.yaml  manual.yaml  sources.yaml
docs/plans/: PLAN_FORMAT.md  development-plan.md
e2e/: accessibility.spec.ts  audio-player.spec.ts  episode-publish.spec.ts  known-pages.ts  parse-headers-file.ts  rss-feed.spec.ts  site-health.spec.ts  site-search.spec.ts  site-smoke.spec.ts
e2e/admin/: candidate-to-published.spec.ts  job-progress-reload.spec.ts
licenses/: README.md
migrations/: env.py
migrations/versions/: eeb8e039e31c_initial_schema_episodes_jobs_audit_.py
scripts/: check_bootstrap.py  check_codex_hooks.py  check_commit_msg.py  check_contracts_drift.py  check_fill_bindings.py  check_guard_corpus.py  check_ownership_guard.py  check_red_first.py  check_rule_dod.py  check_structure.py  check_workflow_integrity.py  db_query.py  dev.py  e2e_fast_forward_episode.py  e2e_seed_candidate.py  fill_bindings.py  generate_contracts.py  generate_structure.py  install_kit.py  install_workbench.py  llm_quality_probe.py  repo_scan.py  revendor_uipro.py  setup-upstreams.ps1  youtube_oauth_setup.py  youtube_test_upload.py
scripts/readings/: generate_third_party_notices.py
services/pipeline/src/history_radio/: __init__.py  cli.py
services/pipeline/tests/: __init__.py  test_cli.py  test_smoke.py
services/pipeline/tests/api/: __init__.py  test_main.py
services/pipeline/tests/books/: test_search.py
services/pipeline/tests/domain/: __init__.py  test_episode_state.py  test_models.py
services/pipeline/tests/ingest/: mock_http.py  test_collector.py  test_crawl_control.py  test_schema.py  test_wikipedia.py
services/pipeline/tests/jobs/: test_events.py  test_recovery.py  test_runner.py
services/pipeline/tests/llm/: test_cache.py  test_extraction.py  test_ledger.py  test_openrouter.py
services/pipeline/tests/media/: test_ffmpeg_audio.py  test_media_manifest.py  test_r2_upload.py  test_slide_render.py  test_slides.py  test_voicevox.py
services/pipeline/tests/publish/: test_artifact_lock.py  test_cloudflare_pages.py  (+9 more)
tests/: guard_corpus.tsv
tests/injections/: common.json  dart-flutter.json  python-uv.json  rust.json  ts-react-web.json
(+141 files in other folders)
