[project]
name = "history-radio"
version = "0.1.0"
description = "歴史スライド動画・自動生成ツール — 生成パイプライン（history_radio_spec_v0_4.md）"
requires-python = ">=3.14,<3.15"
dependencies = [
    "pydantic>=2.10",
    "httpx>=0.28",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "typer>=0.15",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "basedpyright>=1.23",
    "pytest>=8.3",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services/pipeline/src/history_radio"]

[tool.pytest.ini_options]
testpaths = ["services/pipeline/tests"]

[tool.ruff]
line-length = 100
src = ["services/pipeline/src"]
include = ["services/pipeline/**/*.py"]
# guardrails-kit本体(scripts/・.claude/hooks/・.codex/hooks/)とvendorコピー/submoduleは
# 対象外——我々のアプリコードではなくkit/vendor側の規約に従う（AGENTS.md §6）。
# post_edit_lint フックが編集直後に単一ファイルへ ruff --force-exclude を直呼びする時にも
# 効くよう、include だけでなく exclude 側にも明示する（--force-exclude は exclude 系にのみ効く）。
extend-exclude = ["scripts", ".claude", ".codex", "upstream", ".guardrails"]

[tool.ruff.lint]
select = ["E", "F", "I", "T201", "E722"]

[tool.basedpyright]
include = ["services/pipeline/src", "services/pipeline/tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
