[project]
name = "history-radio"
version = "0.1.0"
description = "歴史スライド動画・自動生成ツール — 生成パイプライン（history_radio_spec_v0_4.md）"
requires-python = ">=3.14,<3.15"
dependencies = [
    "pydantic>=2.10",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "typer>=0.15",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "basedpyright>=1.23",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services/pipeline/src/history_radio"]

[tool.pytest.ini_options]
testpaths = ["services/pipeline/tests"]

[tool.ruff]
line-length = 100
src = ["services/pipeline/src"]
# scripts/ はkit本体とプロジェクト固有スクリプト(generate_contracts.py等)が同居する
# ため、ディレクトリ丸ごとではなくkit所有ファイルだけを個別に除外する（下記）。
include = ["services/pipeline/**/*.py", "scripts/**/*.py", "migrations/**/*.py"]
# guardrails-kit本体(.claude/hooks/・.codex/hooks/)とvendorコピー/submoduleは対象外
# ——我々のアプリコードではなくkit/vendor側の規約に従う（AGENTS.md §6）。
# post_edit_lint フックが編集直後に単一ファイルへ ruff --force-exclude を直呼びする時にも
# 効くよう、include だけでなく exclude 側にも明示する（--force-exclude は exclude 系にのみ効く）。
extend-exclude = [
    ".claude",
    ".codex",
    "upstream",
    ".guardrails",
    # kit本体のスクリプト（scripts/REQUIRED_PATHSと同一リスト。プロジェクト固有スクリプト
    # は除外しない——ここに無いscripts/*.pyは我々のコードとして通常どおり検査する）。
    "scripts/repo_scan.py",
    "scripts/generate_structure.py",
    "scripts/check_structure.py",
    "scripts/check_commit_msg.py",
    "scripts/dev.py",
    "scripts/install_kit.py",
    "scripts/check_guard_corpus.py",
    "scripts/check_red_first.py",
    "scripts/check_bootstrap.py",
    "scripts/check_codex_hooks.py",
    "scripts/check_ownership_guard.py",
    "scripts/fill_bindings.py",
    "scripts/check_fill_bindings.py",
    "scripts/check_rule_dod.py",
    "scripts/check_workflow_integrity.py",
    # workbench導入時からある2本（このセッション以前のvendor取り込み用ツール）。
    # kit REQUIRED_PATHS には無いが、同じ「印字前提のCLIツール」の作法で書かれており、
    # このPhaseの範囲外——巻き込んで書式修正しない。
    "scripts/install_workbench.py",
    "scripts/revendor_uipro.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "T201", "E722"]

[tool.ruff.lint.per-file-ignores]
# scripts/ はCLIツール置き場（plan.md §2.2「dev・検証・バックアップ」）——print(
# がそのまま出力契約であり、単一ログ出口(§7)の対象外(kit既定のLOG_EXIT_PREFIXESと
# 同じ境界の引き方 — .guardrails/GUARDRAILS.md §3.3)。
"scripts/**/*.py" = ["T201"]

[tool.basedpyright]
include = ["services/pipeline/src", "services/pipeline/tests", "migrations"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
